Fix clipping issue with “specimen” overlay and modals

--- a/client/styles/cards/cards-common.less
+++ b/client/styles/cards/cards-common.less
@@ -137,7 +137,7 @@
       margin: auto;
       opacity: .075;
       transform: rotate(-30deg);
-      z-index: 9999;
+      z-index: 100;
     }
   }
 }
